--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@hookform/resolvers": "^3.9.0",
-    "@mui/icons-material": "^5.16.4",
-    "@mui/material": "^5.16.4",
+    "@mui/icons-material": "^5.16.6",
+    "@mui/material": "^5.16.6",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@reduxjs/toolkit": "^2.2.6",
     "@tanstack/react-query": "^5.51.11",
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
+    "react-swipeable-views": "^0.14.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
